Fixup grid miss-alignments, add spacing, fix spans
Several pages have been affected, nothing that is visually too crazy
(screenshot wouldn't really help).

--- a/public/stylesheets/less/config.less
+++ b/public/stylesheets/less/config.less
@@ -209,6 +209,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 5px 10px 10px;
+  margin-bottom: 20px;
 }
 
 #config-wrapper {
